# legion-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  build.rs  check.sh  deny.toml
.github/workflows/: pages.yml  release.yml  rust.yml
diagnostic_records/: aliased_partition_when_disjoint.md  automatic_tracing_apophenia.md  bad_sharding_function.md  blocking_futures_nonleaf.md  blocking_python_operations.md  communication_blocking_systemic.md  control_replication_missing.md  copy_profiling_imprecision.md  copy_scheduling_overhead.md  cpu_uses_all_cores.md  critical_path_data_movement_bubbles.md  critical_path_dynamic_collectives_missing_flag.md  critical_path_not_created_yet.md  critical_path_structural_coverage_gap.md  cupynumeric_api_fallback.md  cupynumeric_eager_pool_exhaustion.md  cupynumeric_elementwise_loops.md  debug_build_production.md  deep_region_trees.md  default_mapper_complex_hierarchy.md  diffuse_cross_library_fusion.md  excess_fields_in_requirements.md  expensive_mapper_calls.md  explicit_sync_calls.md  field_space_limit_hit.md  generic_accessors.md  ghost_cell_rdma_misplacement.md  gpu_data_in_system_mem.md  graph_compilation_metg.md  hdf5_region_remap_superlinear.md  healthy_channel_activity_overlapping_execution.md  healthy_cpu_traced_profile.md  healthy_first_iteration_overhead.md  healthy_gpu_traced_profile.md  healthy_lazy_gc_memory_appearance.md  healthy_legate_pipeline_running.md  healthy_multi_node_balanced.md  healthy_utility_trace_replay_spikes.md  high_delayed_duration.md  htr_runtime_regression.md  (+49 more)
docs/: UPSTREAM-DELTA.md  UPSTREAM-README.md  architecture.md
docs/img/: architecture.excalidraw
eval_fixtures/L1-data-movement-002/: case.toml
eval_fixtures/L1-distinct-types-g2d-004/: case.toml
eval_fixtures/L1-find-long-tasks-005/: case.toml
eval_fixtures/L1-longest-anyitem-002/: case.toml
eval_fixtures/L1-longest-in-range-001/: case.toml
eval_fixtures/L1-total-bytes-003/: case.toml
eval_fixtures/L2-children-002/: case.toml
eval_fixtures/L2-cp-root-001/: case.toml
eval_fixtures/L2-first-util-002/: case.toml
eval_fixtures/L3-bound-in-range-001/: case.toml
eval_fixtures/L3-busiest-proc-kind-002/: case.toml
eval_fixtures/L3-overhead-overall-002/: case.toml
examples/: random_data.rs
src/: archive_data.rs  data.rs  deferred_data.rs  file_data.rs  lib.rs  main.rs  merge_data.rs  summary.rs  timestamp.rs
src/ai/: agent.rs  analyzer.rs  bridge.rs  chat_panel.rs  claude_code.rs  data_wrapper.rs  mcp_core.rs  mod.rs  records.rs  tools.rs  trace.rs  viewer_mcp.rs
src/ai/tools/: defs.rs  mod.rs  overview.rs  query.rs  source.rs  wiki.rs
src/app/: core.rs  mod.rs  tile_manager.rs
src/app/core/: legion_ai.rs
src/http/: client.rs
wiki/applications/: circuit.md  miniaero.md  pennant.md
wiki/concepts/: acquire-release.md  aliased-partition.md  argument-map.md  atomic-coherence.md  automated-mapping.md  automatic-tracing.md  backtrace-mode.md  bounds-checks.md  coherence-mode.md  collective-view.md  coloring.md  completion-queue.md  control-flow-as-data.md  control-replication.md  critical-path.md  cuda-interop.md  dataflow-graph.md  debug-mode.md  default-mapper.md  delay-start.md  dependence-analysis.md  dependent-partitioning.md  disjoint-partition.md  distributed-collectable.md  dma-system.md  dynamic-tracing.md  equal-partition.md  equivalence-set.md  error-message-catalog.md  event-graph.md  event-poisoning.md  event.md  exclusive-coherence.md  field-level-non-interference.md  field-space.md  freeze-on-error.md  future-map.md  future.md  garbage-collection.md  gasnet.md  (+78 more)
wiki/glossary/: coherence.md  field-accessor.md  realm.md  shard.md
wiki/meta/: ingest-log.md  lint-report.md  source-coverage.md
wiki/pitfalls/: excessive-data-movement.md  false-dependencies-overbroad-privileges.md  gpu-underutilization.md  instance-fragmentation.md  long-dependence-chains.md  mapper-bouncing.md  mapper-stalls.md  missed-tracing-opportunity.md  non-disjoint-disjoint-partition.md  runtime-overhead-dominates.md
wiki/workflows/: debug-correctness-bug.md  debug-perf-bottleneck.md  enable-tracing.md  move-from-single-node-to-distributed.md  profile-an-app.md  write-a-custom-mapper.md
