[package]
name = "legion_prof_viewer"
version = "0.6.2"
# Fork of StanfordLegion/prof-viewer (upstream author kept for attribution).
authors = [
    "Elliott Slaughter <slaughter@cs.stanford.edu>",
    "Ahmad Zafar <ahmadz@stanford.edu>",
]
description = "Profiler UI frontend for Legion Prof, with an AI diagnostic co-pilot (fork)"
documentation = "https://github.com/ahmadzafar-code/prof-viewer"
homepage = "https://github.com/ahmadzafar-code/prof-viewer"
repository = "https://github.com/ahmadzafar-code/prof-viewer"
readme = "README.md"
keywords = ["legion", "legion-prof", "profiler"]
categories = ["development-tools::profiling"]
license = "Apache-2.0"
# The legion_prof_viewer crate name on crates.io belongs to upstream — this
# fork is distributed via GitHub only.
publish = false

edition = "2024"
rust-version = "1.85"
# `cargo run` stays the viewer app even when feature flags make the helper bins
# (mcp / eval / embedded_runner) buildable — without this, `cargo run --features
# viewer-mcp` errors with "could not determine which binary to run".
default-run = "legion_prof_viewer"

[features]
default = ["client"]
duckdb = ["dep:duckdb"]
# The oracle-graded eval harness (bin/eval.rs): sha2 pins fixture databases.
eval = ["ai", "duckdb", "dep:sha2"]
client = ["dep:reqwest", "dep:url"]
server = ["dep:actix-cors", "dep:actix-web"]
nvtxw = ["dep:nvtxw"]
ai = ["dep:ureq", "dep:serde_json", "dep:image", "dep:base64", "dep:tracing", "dep:tracing-subscriber", "dep:egui_commonmark", "dep:rfd"]  # AI analysis + screenshot encoding + agent tracing + chat markdown + native file dialogs
# In-viewer HTTP MCP server. OFF by default — the 4 standard combos skip it.
# Verified surface (empirical, claude-code 2.1.150): plain POST /mcp, Content-Length
# JSON, single application/json response, Connection: close, no SSE/keep-alive/
# session-id needed -> httparse + std::net::TcpListener (smallest network surface).
viewer-mcp = ["ai", "duckdb", "dep:httparse"]

[dependencies]
egui = "0.29.0"
egui_extras = "0.29.0"
eframe = { version = "0.29.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
ciborium = { version = "0.2" }
zstd = { version = "0.13", default-features = false }

bytes = "1" # for reqwest binary data

itertools = "0.14.0"
lru = "0.14"
percentage = "0.1.0"
regex = "1.11.0"


# ai sidecar HTTP client:
ureq = { version = "2", optional = true }
serde_json = { version = "1", optional = true }

# ai screenshot encoding:
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
base64 = { version = "0.22", optional = true }

# ai chat panel: proper markdown rendering of analysis messages (headings,
# lists, fenced code blocks, tables — Claude-Desktop-like). 0.18 = egui 0.29.
egui_commonmark = { version = "0.18", optional = true }

# ai agent tracing:
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["json", "env-filter", "fmt", "registry"], optional = true }

# duckdb:
# "json" statically bundles the json extension so to_json()/json_group_array()
# (used to serialize query results) work even with enable_external_access(false),
# which disables on-demand extension autoloading. See execute_run_query_raw.
duckdb = { version = "1.4.0", features = ["appender-arrow", "bundled", "json"], optional = true }

# eval bin only: sha-pin case .duckdb files (pulled by the `eval` feature).
sha2 = { version = "0.10", optional = true }

# viewer-mcp: minimal HTTP/1.x request parser for the in-viewer MCP server. Pulled
# only by the (off-by-default) `viewer-mcp` feature.
httparse = { version = "1.10", optional = true }

# client:
url = { version = "2", optional = true }

# server:
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }

# nvtxw:
nvtxw = { version = "0.1", optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
# ai chat panel: native OS folder/file dialogs for the Project-folder and
# DB "Browse…" buttons. Native-only — the wasm build has no filesystem paths.
rfd = { version = "0.15", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = [], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

# examples:
[dev-dependencies]
# random_data:
rand = { version = "0.8" }
# transitive depedency, required for rand to support wasm
getrandom = { version = "0.2", features = ["js"] }

# prof2duckdb:
clap = { version = "4", features = ["cargo", "derive"] }


# Headless MCP server exposing the data tools (run_query/overview/find_blockers/
# read_code/final_answer) over hand-rolled sync stdio JSON-RPC. required-features
# skips the bin for {}, {ai}, {duckdb}, so all 4 cargo-check combos still pass.
[[bin]]
name = "mcp"
path = "src/bin/mcp.rs"
required-features = ["ai", "duckdb"]

# Oracle-graded tool-correctness eval: drives a question through Claude Code via
# the mcp bin, captures final_answer, computes ground truth on a SEPARATE direct
# duckdb connection, and grades. required-features skips it for the other combos.
[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["eval"]

# Headless embedded-agent runner — the GRADEE side of the eval's `embedded` harness
# (eval.rs SPAWNS it, mirroring how the mcp harness spawns `claude`; eval.rs itself
# never imports the crate, preserving oracle independence). Prompt on stdin, one
# JSON envelope on stdout.
[[bin]]
name = "embedded_runner"
path = "src/bin/embedded_runner.rs"
required-features = ["ai", "duckdb"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
